tests/snapshots/examples_fixtures/type_system__failing__41_effect_alias_now_ms_in_io_function.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/41_effect_alias_now_ms_in_io_function.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Effect

requires effect `Clock` but the enclosing context does not provide it

  examples/type_system/failing/41_effect_alias_now_ms_in_io_function.flx:5:5
  |
5 |     n()
  |     ^^^
  |     --- requires `Clock`

Hint:
  annotate the enclosing function with `with Clock`
== stdout ==
<not executed>
